--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-native-screens": "^2.7.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^10.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
