--- a/package.json
+++ b/package.json
@@ -24,24 +24,32 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "immer": "^7.0.9",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-anchor-point": "^1.0.1",
     "react-native-chart-kit": "^5.5.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-modal-filter-picker": "^2.0.0",
+    "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.7.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "^10.9.0"
+    "react-native-webview": "^10.9.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
