--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -197,11 +197,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-contacts')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
       exclude group:'com.facebook.fbjni'
