--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.62.2",
     "react-native-anchor-point": "^1.0.1",
     "react-native-chart-kit": "^5.5.0",
+    "react-native-contacts": "^5.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-gesture-handler": "^1.6.1",
@@ -48,6 +49,7 @@
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^10.9.0",
+    "react-native-youtube-iframe": "^1.3.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
