--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/stack": "^5.2.19",
     "immer": "^7.0.9",
     "react": "16.11.0",
+    "react-currency-format": "^1.0.0",
     "react-native": "0.62.2",
     "react-native-anchor-point": "^1.0.1",
     "react-native-chart-kit": "^5.5.0",
@@ -37,6 +38,7 @@
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-iphone-x-helper": "^1.2.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-filter-picker": "^2.0.0",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.8.0",
@@ -44,6 +46,7 @@
     "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^6.0.0-alpha.6",
+    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
