--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@react-navigation/stack": "^5.2.19",
     "immer": "^7.0.9",
     "react": "16.11.0",
-    "react-currency-format": "^1.0.0",
     "react-native": "0.62.2",
     "react-native-anchor-point": "^1.0.1",
     "react-native-chart-kit": "^5.5.0",
@@ -43,7 +42,6 @@
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-scaling-drawer": "^1.0.1",
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^6.0.0-alpha.6",
     "react-native-skeleton-placeholder": "^2.0.7",
@@ -55,7 +53,8 @@
     "react-native-youtube-iframe": "^1.3.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
