--- a/ios/Podfile
+++ b/ios/Podfile
@@ -84,6 +84,8 @@ target 'Claka' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
+
   target 'ClakaTests' do
     inherit! :complete
     # Pods for testing
