--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-native-contacts": "^5.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.6.8",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-crop-picker": "^0.35.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-filter-picker": "^2.0.0",
@@ -44,6 +46,7 @@
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^6.0.0-alpha.6",
+    "react-native-signature-capture": "^0.4.10",
     "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
