--- a/ios/serviproteccion.xcodeproj/xcshareddata/xcschemes/serviproteccion-tvOS.xcscheme
+++ b/ios/serviproteccion.xcodeproj/xcshareddata/xcschemes/serviproteccion-tvOS.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "Claka-tvOS.app"
-               BlueprintName = "Claka-tvOS"
-               ReferencedContainer = "container:Claka.xcodeproj">
+               BuildableName = "serviproteccion-tvOS.app"
+               BlueprintName = "serviproteccion-tvOS"
+               ReferencedContainer = "container:serviproteccion.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "Claka-tvOSTests.xctest"
-               BlueprintName = "Claka-tvOSTests"
-               ReferencedContainer = "container:Claka.xcodeproj">
+               BuildableName = "serviproteccion-tvOSTests.xctest"
+               BlueprintName = "serviproteccion-tvOSTests"
+               ReferencedContainer = "container:serviproteccion.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Claka-tvOS.app"
-            BlueprintName = "Claka-tvOS"
-            ReferencedContainer = "container:Claka.xcodeproj">
+            BuildableName = "serviproteccion-tvOS.app"
+            BlueprintName = "serviproteccion-tvOS"
+            ReferencedContainer = "container:serviproteccion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "Claka-tvOS.app"
-            BlueprintName = "Claka-tvOS"
-            ReferencedContainer = "container:Claka.xcodeproj">
+            BuildableName = "serviproteccion-tvOS.app"
+            BlueprintName = "serviproteccion-tvOS"
+            ReferencedContainer = "container:serviproteccion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
