--- a/ios/serviproteccion.xcodeproj/xcshareddata/xcschemes/serviproteccion.xcscheme
+++ b/ios/serviproteccion.xcodeproj/xcshareddata/xcschemes/serviproteccion.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "Claka.app"
-               BlueprintName = "Claka"
-               ReferencedContainer = "container:Claka.xcodeproj">
+               BuildableName = "serviproteccion.app"
+               BlueprintName = "serviproteccion"
+               ReferencedContainer = "container:serviproteccion.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ClakaTests.xctest"
-               BlueprintName = "ClakaTests"
-               ReferencedContainer = "container:Claka.xcodeproj">
+               BuildableName = "serviproteccionTests.xctest"
+               BlueprintName = "serviproteccionTests"
+               ReferencedContainer = "container:serviproteccion.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Claka.app"
-            BlueprintName = "Claka"
-            ReferencedContainer = "container:Claka.xcodeproj">
+            BuildableName = "serviproteccion.app"
+            BlueprintName = "serviproteccion"
+            ReferencedContainer = "container:serviproteccion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "Claka.app"
-            BlueprintName = "Claka"
-            ReferencedContainer = "container:Claka.xcodeproj">
+            BuildableName = "serviproteccion.app"
+            BlueprintName = "serviproteccion"
+            ReferencedContainer = "container:serviproteccion.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
