--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^8.4.5",
+    "@react-native-firebase/messaging": "^7.9.0",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
@@ -34,6 +36,7 @@
     "react-native-chart-kit": "^5.5.0",
     "react-native-contacts": "^5.2.7",
     "react-native-datepicker": "^1.7.2",
+    "react-native-document-picker": "^3.5.4",
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
@@ -49,6 +52,7 @@
     "react-native-signature-capture": "^0.4.10",
     "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-snap-carousel": "^3.9.0",
+    "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
@@ -57,6 +61,7 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
