--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "immer": "^7.0.9",
+    "lottie-react-native": "^3.5.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-anchor-point": "^1.0.1",
