--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-contacts": "^5.2.7",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^3.6.8",
+    "react-native-fix-image": "^2.0.1",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.35.0",
