--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.5",
@@ -56,6 +57,7 @@
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^10.9.0",
     "react-native-youtube-iframe": "^1.3.0",
