--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swipeout": "^2.3.6",
+    "react-native-text-input-mask": "^2.0.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-webview": "^10.9.0",
     "react-native-youtube-iframe": "^1.3.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
