--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@react-navigation/stack": "^5.2.19",
     "immer": "^7.0.9",
     "lottie-react-native": "^3.5.0",
+    "moment": "^2.29.1",
     "react": "16.11.0",
+    "react-moment": "^1.0.0",
     "react-native": "0.62.2",
     "react-native-anchor-point": "^1.0.1",
     "react-native-chart-kit": "^5.5.0",
