--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-document-picker": "^3.5.4",
     "react-native-dropdown-picker": "^3.6.8",
-    "react-native-firebase": "^5.6.0",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-fix-image": "^2.0.1",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
@@ -51,7 +51,6 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-filter-picker": "^2.0.0",
     "react-native-paper": "^4.1.0",
-    "react-native-pdf": "^6.2.2",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
