--- a/ios/Podfile
+++ b/ios/Podfile
@@ -110,6 +110,8 @@ target 'serviproteccion' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+
   target 'serviproteccionTests' do
     inherit! :complete
     # Pods for testing
