--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.10",
@@ -51,6 +52,7 @@
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-filter-picker": "^2.0.0",
+    "react-native-neomorph-shadows": "^1.1.2",
     "react-native-paper": "^4.1.0",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
@@ -72,7 +74,9 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
-    "socket.io-client": "^2.3.0"
+    "scourjs": "1.0.1",
+    "socket.io-client": "^2.3.0",
+    "ui-neumorphism": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
