--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "scourjs": "1.0.1",
-    "socket.io-client": "^2.3.0",
-    "ui-neumorphism": "^1.1.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
