--- a/ios/Podfile
+++ b/ios/Podfile
@@ -110,7 +110,7 @@ target 'serviproteccion' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
-  pod 'ReactNativeART', :path => '../node_modules/@react-native-community/art'
+  pod 'RNInputMask', :path => '../node_modules/react-native-text-input-mask/ios/InputMask'
 
   target 'serviproteccionTests' do
     inherit! :complete
