Arreglo de paquetes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,7 +163,7 @@ android {
     }
     buildTypes {
         debug {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
@@ -173,13 +173,13 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
-    /*
+    
     packagingOptions {
+        pickFirst "lib/x86/libc++_shared.so"
         pickFirst "lib/armeabi-v7a/libc++_shared.so"
         pickFirst "lib/arm64-v8a/libc++_shared.so"
-        pickFirst "lib/x86/libc++_shared.so"
         pickFirst "lib/x86_64/libc++_shared.so"
-    }*/
+    }
 
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
