--- a/ios/Podfile
+++ b/ios/Podfile
@@ -112,6 +112,8 @@ target 'serviproteccion' do
 
   pod 'RNInputMask', :path => '../node_modules/react-native-text-input-mask/ios/InputMask'
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'serviproteccionTests' do
     inherit! :complete
     # Pods for testing
