--- a/ios/Podfile
+++ b/ios/Podfile
@@ -114,6 +114,8 @@ target 'serviproteccion' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'RealmJS', :path => '../node_modules/realm'
+
   target 'serviproteccionTests' do
     inherit! :complete
     # Pods for testing
