--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
+    "axios": "^0.21.1",
     "immer": "^7.0.9",
     "lottie-react-native": "^3.5.0",
     "moment": "^2.29.1",
@@ -71,6 +72,7 @@
     "react-native-youtube-iframe": "^1.3.0",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
+    "realm": "^10.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
