--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.6",
     "@react-native-firebase/messaging": "^7.9.1",
+    "@react-navigation/bottom-tabs": "^5.11.4",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
-    "immer": "^7.0.9",
+    "immer": "^7.0.15",
+    "install": "^0.13.0",
     "lottie-react-native": "^3.5.0",
     "moment": "^2.29.1",
+    "npm": "^6.14.11",
     "react": "16.11.0",
     "react-moment": "^1.0.0",
     "react-native": "0.62.2",
@@ -76,7 +79,8 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "scourjs": "1.0.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "use-immer": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
