--- a/ios/serviproteccion/Info.plist
+++ b/ios/serviproteccion/Info.plist
@@ -118,5 +118,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+<array>
+        
+        <string>2831106907160474</string>
+        <string>fbauth2</string>
+		<string>fbshareextension</string>
+</array>
 </dict>
 </plist>
