--- a/ios/serviproteccion/Info.plist
+++ b/ios/serviproteccion/Info.plist
@@ -20,10 +20,37 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb893331661479078</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.662054188954-kqu3410us0rld982mosle3hb66had56b</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>FacebookAppID</key>
+	<string>893331661479078</string>
+	<key>FacebookDisplayName</key>
+	<string>ServiProtección</string>
 	<key>LSApplicationCategoryType</key>
-	<string/>
+	<string></string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>893331661479078</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -51,7 +78,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>Servi necesita los contactos</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Servi necesita acceder a las fotos</string>
 	<key>UIAppFonts</key>
@@ -118,12 +145,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>LSApplicationQueriesSchemes</key>
-<array>
-        
-        <string>2831106907160474</string>
-        <string>fbauth2</string>
-		<string>fbshareextension</string>
-</array>
 </dict>
 </plist>
