--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/datetimepicker": "^3.0.2",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^8.4.6",
     "@react-native-firebase/messaging": "^7.9.1",
@@ -55,6 +56,7 @@
     "react-native-fix-image": "^2.1.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-signin": "^2.1.1",
     "react-native-image-crop-picker": "^0.35.0",
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-linear-gradient": "^2.5.6",
