social login android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -207,6 +207,9 @@ dependencies {
     implementation project(':react-native-fs')
      implementation 'com.android.support:multidex:1.0.3'
     implementation project(':@react-native-community_datetimepicker')
+    compile(project(":@react-native-community_google-signin")){
+        exclude group: "com.google.android.gms" // very important
+    }
     implementation project(':react-native-contacts')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
@@ -214,6 +217,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     implementation 'com.google.firebase:firebase-core:+'
+    
     implementation ('com.google.firebase:firebase-messaging:+') {
         force = true;
     }
