--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-native-modal-filter-picker": "^2.0.0",
     "react-native-paper": "^4.1.0",
     "react-native-pdf": "^6.2.2",
+    "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
