--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "android:apk": "cd android && ./gradlew assembleRelease",
+    "key": "keytool -genkeypair -v -keystore servi.keystore -alias servi -keyalg RSA -keysize 2048 -validity 10000",
+    "clean": "rm -rf android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw",
+    "apk": "cd android && ./gradlew assembleRelease",
     "sha1": "keytool -exportcert -keystore ~/.android/debug.keystore -list -v"
   },
   "husky": {
