--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "key": "keytool -genkeypair -v -keystore servi.keystore -alias servi -keyalg RSA -keysize 2048 -validity 10000",
     "clean": "rm -rf android/app/src/main/res/drawable-* && rm -rf ./android/app/src/main/res/raw",
-    "apk": "cd android && ./gradlew assembleRelease",
+    "apk": "cd android && ./gradlew clean && ./gradlew bundleRelease",
     "sha1": "keytool -exportcert -keystore ~/.android/debug.keystore -list -v"
   },
   "husky": {
@@ -37,10 +37,8 @@
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
     "immer": "^7.0.15",
-    "install": "^0.13.0",
     "lottie-react-native": "^3.5.0",
     "moment": "^2.29.1",
-    "npm": "^6.14.11",
     "pouchdb-adapter-asyncstorage": "^6.4.1",
     "pouchdb-react-native": "^6.4.1",
     "react": "16.11.0",
@@ -55,7 +53,6 @@
     "react-native-dropdown-picker": "^3.6.8",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-facebook-login": "^1.6.2",
-    "react-native-firebase": "^5.6.0",
     "react-native-fix-image": "^2.1.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
@@ -64,28 +61,25 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-modal-filter-picker": "^2.0.0",
     "react-native-paper": "^4.1.0",
-    "react-native-pdf": "^6.2.2",
     "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^6.0.0-alpha.6",
     "react-native-signature-capture": "^0.4.10",
-    "react-native-skeleton-placeholder": "^2.0.7",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-webview": "^11.0.3",
+    "react-native-webview": "^11.2.3",
     "react-native-youtube-iframe": "^1.3.0",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
-    "scourjs": "1.0.1",
     "socket.io-client": "^3.1.1",
     "use-immer": "^0.4.2"
   },
