--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
-    "@react-native-firebase/app": "^8.4.6",
-    "@react-native-firebase/messaging": "^7.9.1",
+    "@react-native-firebase/app": "^12.0.0",
+    "@react-native-firebase/messaging": "^12.0.0",
     "@react-navigation/bottom-tabs": "^5.11.4",
     "@react-navigation/drawer": "^5.9.0",
     "@react-navigation/native": "^5.2.4",
@@ -65,6 +65,7 @@
     "react-native-progress-steps": "^1.3.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.7.0",
     "react-native-sensitive-info": "^6.0.0-alpha.6",
     "react-native-signature-capture": "^0.4.10",
